fix spacing

--- a/styles.scss
+++ b/styles.scss
@@ -86,10 +86,11 @@ button {
   font-size: 20px;
   border-radius: 15px;
   border: 1px white solid;
-  height: 2vw;
+  height: 4vw;
   width: 10vw;
   cursor: pointer;
   color: #fff;
+  padding: 5px;
 }
 
 button:hover {
